--- a/SlidningMenuTest/project.properties
+++ b/SlidningMenuTest/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-17
 android.library.reference.1=../../SlidingMenuLib/SlidingMenu-master/library
+android.library.reference.2=../../slashat/ActionBarSherlock/library
